# OperatingSystems

./: README.md
Filesystem/: CMakeLists.txt  block.h  copy.h  file.h  filesystem.h  init.h  main.c  out.txt  remove.h  represent.h  save.h  tests.sh  type.h
Filesystem/tests/: adding_removing_file  creating_disk  external_fragmentation  internal_fragmentation  removing_disk  test
ProcessScheduling/include/minix/: callnr.h  com.h
ProcessScheduling/include/sys/: types.h
ProcessScheduling/src/fs/: table.c
ProcessScheduling/src/kernel/: clock.c  const.h  main.c  proc.c  proc.h  system.c
ProcessScheduling/src/mm/: misc.c  proto.h  table.c
ProcessScheduling/src/test/: sched_tests.sh  test_groups.c  test_olding.c  test_rr.c  test_sjf.c
ProcessSynchMonitores/: CMakeLists.txt  main.cpp
ProcessSynchSemaphores/: CMakeLists.txt  consumer.c  main.c  producer.c  shared.h
SystemMemoryManagement/include/minix/: callnr.h
SystemMemoryManagement/src/fs/: table.c
SystemMemoryManagement/src/mm/: alloc.c  param.h  proto.h  table.c
SystemMemoryManagement/src/test/: out.txt  run_test.sh  t.c  w.c
